<resources>
    <string name="app_name">کتابخونه شخصی</string>
    <string name="developer_name">Amin Sarlak</string>
    <string name="android_dev">android Dev</string>
    <string name="description_profile">this application developed in 27 February 2020, and redesigned in 7 May 2020, i hope this application will be a way to successful in future.</string>
    <string name="check_my_social_media">Check my social media</string>
    <string name="book_name_hint">نام کتاب</string>
    <string name="author_hint">نویسنده</string>
    <string name="translator_hint">مترجم</string>
    <string name="topic_hint">موضوع</string>
    <string name="cases_hint">تعداد جلد</string>
    <string name="description_hint">توضیحات</string>
    <string name="lend_text">امانت داده شده</string>
    <string name="to_text">به</string>
    <string name="btn_edit_text_informationLayout">ویرایش کردن اطلاعات</string>
    <string name="save_btn_informationLayout">ثبت</string>
    <string name="delete_btn_informationLyout">حذف</string>
    <string name="edit_btn_informationLyaout">ویرایش</string>
    <string name="search_book">جستجوی کتاب</string>
    <string name="dashboard">داشبورد</string>
    <string name="information_drawer_text">اطلاعات</string>
    <string name="book_number">تعداد کتاب ها</string>
    <string name="books_number">تعداد کل کتاب ها</string>
    <string name="lend_drawer">امانت داده شده</string>
    <string name="filter_text_drawer">فیلتر</string>
    <string name="roman_irani">رمان ایرانی</string>
    <string name="roman_kharegi">رمان خارجی</string>
    <string name="dastan_kotah">داستان کوتاه</string>
    <string name="mazhabi">مذهبی</string>
    <string name="tarikhi">تاریخی</string>
    <string name="sheer">شعر</string>
    <string name="adabi">ادبی</string>
    <string name="amozeshi">آموزشی</string>
    <string name="elmi">علمی</string>
    <string name="zaban_englishi">زبان انگلیسی</string>
    <string name="ravanshenasi_moafaghiat">روانشناسی و موفقیت</string>
    <string name="etelaat_omomi">اطلاعات عمومی</string>
    <string name="pezeshki">پزشکی</string>
    <string name="zendegi_name">زندگی نامه</string>
    <string name="varzashi">ورزشی</string>
    <string name="adab_va_rosom">آداب و رسوم</string>
    <string name="sayer">سایر</string>
    <string name="amanet_dade_shodeh">امانت دهده شده</string>
    <string name="jadidtrinha">جدیدترین ها</string>
    <string name="search_for_book">جستجوی بر اساس کتاب</string>
    <string name="search_for_author">جستجوی بر اساس نویسنده</string>
    <string name="search_for_translator">جستجوی بر اساس مترجم</string>
    <string name="filter_button_dawer">فیلتر</string>

</resources>
