<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/info_background_color"
    android:elevation="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/close_dialog2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@android:color/white" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_image"
                app:civ_border="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17000002" />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_profile" />

            <TextView
                android:id="@+id/developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_dev"
                android:textColor="@color/gray_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_profile" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/description_profile"
                android:textColor="@color/gray_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/developer" />

            <View
                android:id="@+id/liner"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/text_description" />

            <TextView
                android:id="@+id/social_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/check_my_social_media"
                android:textColor="@color/gray_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/liner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/social_media">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_social_media"
                    android:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_linkdin"
                    android:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_brands_and_logotypes"
                    android:tint="@android:color/white" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>